# VLunAr

./: .gitignore  README.md  main.py  pyproject.toml  setup.py  vlm_demo.py
datasets/: generate_dataset.py
environments/: custom_lander.py
models/: dqn_class.py  vla.py
scripts/: train_all.sh  train_land.sh  train_strafe_left.sh  train_strafe_right.sh  train_takeoff.sh
tests/: land.py  strafe_left.py  strafe_right.py  takeoff.py
trainers/: land.py  run_sample_training.py  strafe_left.py  strafe_right.py  takeoff.py  test_vla_trainer.py  vla_trainer.py
